Added "Predict type" section to each model type documentation.

--- a/man/rmd/C5_rules_C5.0.Rmd
+++ b/man/rmd/C5_rules_C5.0.Rmd
@@ -60,6 +60,16 @@ C5_rules(
 #| child: template-uses-case-weights.Rmd
 ```
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("C5_rules_predict") |>
+  dplyr::select(mode, type)
+
+```
+
 ## Saving fitted model objects
 
 ```{r}
