--- a/man/rmd/auto_ml_h2o.Rmd
+++ b/man/rmd/auto_ml_h2o.Rmd
@@ -23,9 +23,12 @@ Engine arguments of interest
 
 ```{r}
 #| label: h2o-reg
-auto_ml() |>  
-  set_engine("h2o") |> 
-  set_mode("regression") |> 
+
+library(agua)
+
+auto_ml() |>
+  set_engine("h2o") |>
+  set_mode("regression") |>
   translate()
 ```
 
@@ -50,6 +53,16 @@ auto_ml() |>
 
 ```{r}
 #| child: template-h2o-init.Rmd
+```
+
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("auto_ml_predict") |>
+  dplyr::select(mode, type)
+
 ```
 
 ## Saving fitted model objects
