--- a/man/rmd/discrim_flexible_earth.Rmd
+++ b/man/rmd/discrim_flexible_earth.Rmd
@@ -59,6 +59,16 @@ discrim_flexible(
 #| child: template-uses-case-weights.Rmd
 ```
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("discrim_flexible_predict") |>
+  dplyr::select(mode, type)
+
+```
+
 ## References
 
  - Hastie, Tibshirani & Buja (1994) Flexible Discriminant Analysis by Optimal 
