--- a/man/rmd/logistic_reg_gee.Rmd
+++ b/man/rmd/logistic_reg_gee.Rmd
@@ -79,6 +79,17 @@ Also, because of issues with the `gee()` function, a supplementary call to `glm(
 #| child: template-no-case-weights.Rmd
 ```
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("logistic_reg_predict") |>
+  dplyr::filter(engine == "gee") |>
+  dplyr::select(mode, type)
+
+```
+
 ## References
 
  - Liang, K.Y. and Zeger, S.L. (1986) Longitudinal data analysis using generalized linear models. _Biometrika_, 73 13–22.
