--- a/man/rmd/poisson_reg_glmnet.Rmd
+++ b/man/rmd/poisson_reg_glmnet.Rmd
@@ -66,6 +66,17 @@ By default, `glmnet::glmnet()` uses the argument `standardize = TRUE` to center 
 #| child: template-uses-case-weights.Rmd
 ```
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("poisson_reg_predict") |>
+  dplyr::filter(engine == "glmnet") |>
+  dplyr::select(mode, type)
+
+```
+
 ## Saving fitted model objects
 
 ```{r}
