--- a/man/rmd/poisson_reg_h2o.Rmd
+++ b/man/rmd/poisson_reg_h2o.Rmd
@@ -61,6 +61,16 @@ poisson_reg(penalty = double(1), mixture = double(1)) |>
 
 By default, `h2o::h2o.glm()` uses the argument `standardize = TRUE` to center and scale all numerical columns. 
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("poisson_reg_predict") |>
+  dplyr::filter(engine == "h2o") |>
+  dplyr::select(mode, type)
+
+```
 
 ## Initializing h2o  
 
