--- a/man/rmd/rand_forest_partykit.Rmd
+++ b/man/rmd/rand_forest_partykit.Rmd
@@ -84,6 +84,17 @@ rand_forest() |>
 #| child: template-tree-split-factors.Rmd
 ```
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("rand_forest_predict") |>
+  dplyr::filter(engine == "partykit") |>
+  dplyr::select(mode, type)
+
+```
+
 ## Other details
 
 ```{r}
