--- a/man/rmd/rand_forest_spark.Rmd
+++ b/man/rmd/rand_forest_spark.Rmd
@@ -81,6 +81,16 @@ rand_forest(
 
 Note that, for spark engines, the `case_weight` argument value should be a character string to specify the column with the numeric case weights. 
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("rand_forest_predict") |>
+  dplyr::filter(engine == "spark") |>
+  dplyr::select(mode, type)
+
+```
 
 ## References
 
