--- a/man/rmd/boost_tree_mboost.Rmd
+++ b/man/rmd/boost_tree_mboost.Rmd
@@ -54,6 +54,17 @@ boost_tree() |>
 #| child: template-tree-split-factors.Rmd
 ```
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("boost_tree_predict") |>
+  dplyr::filter(engine == "mboost") |>
+  dplyr::select(mode, type)
+
+```
+
 ## Other details
 
 ```{r}
