--- a/man/rmd/decision_tree_partykit.Rmd
+++ b/man/rmd/decision_tree_partykit.Rmd
@@ -89,6 +89,17 @@ decision_tree(tree_depth = integer(1), min_n = integer(1)) |>
 #| child: template-tree-split-factors.Rmd
 ```
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("decision_tree_predict") |>
+  dplyr::filter(engine == "partykit") |>
+  dplyr::select(mode, type)
+
+```
+
 ## Other details
 
 ```{r}
