--- a/man/rmd/decision_tree_spark.Rmd
+++ b/man/rmd/decision_tree_spark.Rmd
@@ -65,6 +65,17 @@ decision_tree(tree_depth = integer(1), min_n = integer(1)) |>
 
 Note that, for spark engines, the `case_weight` argument value should be a character string to specify the column with the numeric case weights. 
 
+
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("decision_tree_predict") |>
+  dplyr::filter(engine == "spark") |>
+  dplyr::select(mode, type)
+
+```
 ## Other details
 
 ```{r}
