--- a/man/rmd/discrim_quad_sparsediscrim.Rmd
+++ b/man/rmd/discrim_quad_sparsediscrim.Rmd
@@ -64,6 +64,17 @@ discrim_quad(regularization_method = character(0)) |>
 #| child: template-no-case-weights.Rmd
 ```
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("discrim_quad_predict") |>
+  dplyr::filter(engine == "sparsediscrim") |>
+  dplyr::select(mode, type)
+
+```
+
 ## References
 
  - `qda_diag()`: Dudoit, Fridlyand and Speed (2002) Comparison of Discrimination Methods for the Classification of Tumors Using Gene Expression Data, _Journal of the American Statistical Association_, 97:457, 77-87. 
