--- a/man/rmd/logistic_reg_h2o.Rmd
+++ b/man/rmd/logistic_reg_h2o.Rmd
@@ -68,6 +68,16 @@ logistic_reg() |>
 
 By default, [h2o::h2o.glm()] uses the argument `standardize = TRUE` to center and scale all numeric columns. 
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("logistic_reg_predict") |>
+  dplyr::filter(engine == "h2o") |>
+  dplyr::select(mode, type)
+
+```
 
 ## Initializing h2o 
 
