--- a/man/rmd/logistic_reg_stan_glmer.Rmd
+++ b/man/rmd/logistic_reg_stan_glmer.Rmd
@@ -84,6 +84,17 @@ For prediction, the `"stan_glmer"` engine can compute posterior intervals analog
 #| child: template-uses-case-weights.Rmd
 ```
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("logistic_reg_predict") |>
+  dplyr::filter(engine == "stan_glmer") |>
+  dplyr::select(mode, type)
+
+```
+
 ## References
 
  - McElreath, R. 2020 _Statistical Rethinking_. CRC Press.
