--- a/man/rmd/multinom_reg_nnet.Rmd
+++ b/man/rmd/multinom_reg_nnet.Rmd
@@ -50,6 +50,17 @@ multinom_reg(penalty = double(1)) |>
 #| child: template-same-scale.Rmd
 ```
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("multinom_reg_predict") |>
+  dplyr::filter(engine == "nnet") |>
+  dplyr::select(mode, type)
+
+```
+
 ## Examples 
 
 The "Fitting and Predicting with parsnip" article contains [examples](https://parsnip.tidymodels.org/articles/articles/Examples.html#multinom-reg-nnet) for `multinom_reg()` with the `"nnet"` engine.
