--- a/man/rmd/poisson_reg_glm.Rmd
+++ b/man/rmd/poisson_reg_glm.Rmd
@@ -45,6 +45,17 @@ _However_, the documentation in [stats::glm()] assumes that is specific type of 
 
 If frequency weights are being used in your application, the [glm_grouped()] model (and corresponding engine) may be more appropriate. 
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("poisson_reg_predict") |>
+  dplyr::filter(engine == "glm") |>
+  dplyr::select(mode, type)
+
+```
+
 ## Saving fitted model objects
 
 ```{r}
