--- a/man/rmd/rule_fit_h2o.Rmd
+++ b/man/rmd/rule_fit_h2o.Rmd
@@ -88,6 +88,17 @@ rule_fit(
 #| child: template-makes-dummies.Rmd
 ```
 
+## Prediction types
+
+```{r}
+#| label: predict-types
+
+parsnip:::get_from_env("rule_fit_predict") |>
+  dplyr::filter(engine == "h2o") |>
+  dplyr::select(mode, type)
+
+```
+
 ## Other details
 
 ```{r}
